# Agentic-AI-Dev

./: .gitignore  README.md  pyproject.toml
coding_assistant/: agent.py  fib  fib.cpp  pi_1000_digits.txt  tool.py
coding_assistant/scripts/: train.py
script_executor_agent/: agent.py  tool.py
script_executor_agent/scripts/: pi_value_compute.py
scripts/: test.py
sql_agent/: agent.py
